--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.paulrlutz.vocabmanager">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,6 +31,8 @@
         <activity android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings">
 
+        </activity>
+        <activity android:name=".activities.DefinitionLookupActivity">
         </activity>
 
         <provider android:name=".contentproviders.VocabWordSuggestionProvider"
